{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 969,
  "lineage": "1a486b7a-42cb-10b0-0511-5218f3252564",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "Listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:listener/app/LoadBalancer/3d98d32edaf13af8/a4ee94f5496ee9e3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:targetgroup/TG/a66b41a6420a9421",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:listener/app/LoadBalancer/3d98d32edaf13af8/a4ee94f5496ee9e3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:loadbalancer/app/LoadBalancer/3d98d32edaf13af8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.Target",
            "aws_lb.LoadBalancer",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_subnet",
            "aws_subnet.demo_subnet2",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "Target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:targetgroup/TG/a66b41a6420a9421",
            "arn_suffix": "targetgroup/TG/a66b41a6420a9421",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:targetgroup/TG/a66b41a6420a9421",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09de9e4d48f8c5a85"
          },
          "dependencies": [
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "Instances_Alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:targetgroup/TG/a66b41a6420a9421-20210301161351738600000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:targetgroup/TG/a66b41a6420a9421",
            "target_id": "i-02d1a94220c416ef4"
          },
          "dependencies": [
            "aws_alb_target_group.Target",
            "aws_instance.demo-instance2",
            "aws_key_pair.demo_key",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_subnet",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "Instances_Alb2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:targetgroup/TG/a66b41a6420a9421-20210301161402640500000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:targetgroup/TG/a66b41a6420a9421",
            "target_id": "i-0a1b7285b676b60a9"
          },
          "dependencies": [
            "aws_alb_target_group.Target",
            "aws_instance.demo-instance1",
            "aws_key_pair.demo_key",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_subnet",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f9ea74050d6f812",
            "arn": "arn:aws:ec2:eu-central-1:210416437462:instance/i-0a1b7285b676b60a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1b7285b676b60a9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c85e85b8e4f0db2",
            "private_dns": "ip-172-31-31-106.eu-central-1.compute.internal",
            "private_ip": "172.31.31.106",
            "public_dns": "ec2-3-120-209-222.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.209.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e39d29fe85d473b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c175ad5cfb1994cd",
            "tags": {
              "description": "somedemos",
              "name": "DemoInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03969c0eb58cc16e0"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_subnet",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f9ea74050d6f812",
            "arn": "arn:aws:ec2:eu-central-1:210416437462:instance/i-02d1a94220c416ef4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d1a94220c416ef4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0802ae139eef8a31d",
            "private_dns": "ip-172-31-22-182.eu-central-1.compute.internal",
            "private_ip": "172.31.22.182",
            "public_dns": "ec2-18-198-24-177.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.24.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034de8878ae45ddf9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c175ad5cfb1994cd",
            "tags": {
              "description": "somedemos2",
              "name": "DemoInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03969c0eb58cc16e0"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_subnet",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:210416437462:internet-gateway/igw-0daa93f4642f6181d",
            "id": "igw-0daa93f4642f6181d",
            "owner_id": "210416437462",
            "vpc_id": "vpc-09de9e4d48f8c5a85"
          },
          "dependencies": [
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LoadBalancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:loadbalancer/app/LoadBalancer/3d98d32edaf13af8",
            "arn_suffix": "app/LoadBalancer/3d98d32edaf13af8",
            "dns_name": "LoadBalancer-557910684.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:210416437462:loadbalancer/app/LoadBalancer/3d98d32edaf13af8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LoadBalancer",
            "security_groups": [
              "sg-03969c0eb58cc16e0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c175ad5cfb1994cd"
              },
              {
                "subnet_id": "subnet-0c9c31269abf880bc"
              }
            ],
            "subnets": [
              "subnet-0c175ad5cfb1994cd",
              "subnet-0c9c31269abf880bc"
            ],
            "vpc_id": "vpc-09de9e4d48f8c5a85",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.demo_sg",
            "aws_subnet.demo_subnet",
            "aws_subnet.demo_subnet2",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0031ec59aa8832878",
            "owner_id": "210416437462",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0daa93f4642f6181d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09de9e4d48f8c5a85"
          },
          "dependencies": [
            "aws_internet_gateway.gt",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa2037c4682b3aaf",
            "route_table_id": "rtb-0031ec59aa8832878",
            "subnet_id": "subnet-0c175ad5cfb1994cd"
          },
          "dependencies": [
            "aws_internet_gateway.gt",
            "aws_route_table.route",
            "aws_subnet.demo_subnet",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d6a571c93439eb5",
            "route_table_id": "rtb-0031ec59aa8832878",
            "subnet_id": "subnet-0c9c31269abf880bc"
          },
          "dependencies": [
            "aws_internet_gateway.gt",
            "aws_route_table.route",
            "aws_subnet.demo_subnet2",
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:210416437462:security-group/sg-03969c0eb58cc16e0",
            "description": "Allow https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03969c0eb58cc16e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "62.87.30.66/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "210416437462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for allowing 443"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de9e4d48f8c5a85"
          },
          "dependencies": [
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:210416437462:subnet/subnet-0c175ad5cfb1994cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0c175ad5cfb1994cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210416437462",
            "vpc_id": "vpc-09de9e4d48f8c5a85"
          },
          "dependencies": [
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:210416437462:subnet/subnet-0c9c31269abf880bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.31.8.0/24",
            "id": "subnet-0c9c31269abf880bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "210416437462",
            "vpc_id": "vpc-09de9e4d48f8c5a85"
          },
          "dependencies": [
            "aws_vpc.demonet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demonet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:210416437462:vpc/vpc-09de9e4d48f8c5a85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0910f823aa2171a82",
            "default_route_table_id": "rtb-070fb1985bbb8fc4e",
            "default_security_group_id": "sg-0b41238410289e345",
            "dhcp_options_id": "dopt-d17efebb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09de9e4d48f8c5a85",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-070fb1985bbb8fc4e",
            "owner_id": "210416437462"
          }
        }
      ]
    }
  ]
}